# lazy-allrounder

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config.example.toml  flake.nix
.agents/skills/lazy-allrounder-architecture/: SKILL.md
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  e2e.yml  release.yml
assets/: icon.icns
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  ports.rs  services.rs
crates/gui/: Cargo.toml
crates/gui/src/: actions.rs  hotkeys.rs  icon.rs  ipc.rs  main.rs  session.rs  state.rs  tray.rs
crates/gui/src/overlay/: badge.rs  mod.rs  panel.rs  theme.rs  viewport.rs
crates/integrations/: Cargo.toml
crates/integrations/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: autostart.rs  clipboard.rs  desktop_entry.rs  dictate_runtime.rs  display.rs  hotkeys.rs  insertion.rs  ipc.rs  lib.rs  notifications.rs  platform.rs  playback.rs  process_control.rs  runtime_state.rs  secrets.rs  text_insertion.rs
docs/: adr.md  deploy.md
tools/: gen_icon.py
xtask/: Cargo.toml
xtask/src/: main.rs
