[workspace]
members = [
  "crates/app",
  "crates/cli",
  "crates/core",
  "crates/integrations",
  "crates/platform",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.90"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
clap = { version = "4.5.50", features = ["derive"] }
directories = "6.0.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
