[workspace]
members = [
  "crates/app",
  "crates/cli",
  "crates/core",
  "crates/integrations",
  "crates/platform",
  "xtask",
]
default-members = [
  "crates/app",
  "crates/cli",
  "crates/core",
  "crates/integrations",
  "crates/platform",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.94"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
