[workspace]
members = [
  "crates/app",
  "crates/cli",
  "crates/core",
  "crates/gui",
  "crates/integrations",
  "crates/platform",
  "xtask",
]
default-members = [
  "crates/app",
  "crates/cli",
  "crates/core",
  "crates/gui",
  "crates/integrations",
  "crates/platform",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.94"
version = "0.1.0"

[workspace.dependencies]
arboard = "3.6.1"
async-trait = "0.1.89"
auto-launch = "0.5"
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "wayland", "x11"] }
egui = "0.34"
global-hotkey = "0.8"
# Decodes the embedded PNG app icon (window + tray). image is already in the
# tree transitively (via arboard/eframe); pinning it PNG-only here avoids
# pulling the extra JPEG/GIF/WebP decoders that default features would add.
image = { version = "0.25", default-features = false, features = ["png"] }
# Platform features are cfg-gated inside the crate, so enabling all three is
# safe cross-platform.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
notify-rust = "4"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
rodio = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
# NOTE: tray-icon 0.24.1 has no pure-Rust "linux-ksni" feature (that was an
# incorrect assumption from earlier research) — real feature list is
# common-controls-v6/default/gtk/libxdo/serde. Default features pull in GTK
# on Linux; revisit lighter Linux tray backends (e.g. the `ksni` crate
# directly) as a follow-up if the GTK dependency proves too heavy in practice.
tray-icon = "0.24.1"
# Only for the Linux backend-selection hook (EventLoopBuilderExtX11); the
# version must track the winit that eframe resolves to.
winit = { version = "0.30.13", default-features = false, features = ["x11"] }
