[package]
name = "lazy-allrounder-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
lazy-allrounder-app = { path = "../app" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
