[package]
name = "lazy-allrounder-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Floating voice-AI overlay: read aloud, summarize, explain, ask, and dictate anywhere"

# Native installer definitions consumed by `cargo packager` in the release
# workflow (NSIS on Windows, .dmg/.app on macOS, .deb/AppImage on Linux).
[package.metadata.packager]
productName = "Lazy Allrounder"
identifier = "dev.timfewi.lazy-allrounder"
category = "Utility"
homepage = "https://github.com/timfewi/lazy-allrounder"
icons = ["../../assets/icon.png", "../../assets/icon.ico", "../../assets/icon.icns"]
licenseFile = "../../LICENSE"
beforePackagingCommand = "cargo build --release -p lazy-allrounder-gui"

[dependencies]
eframe.workspace = true
egui.workspace = true
lazy-allrounder-app = { path = "../app" }
lazy-allrounder-core = { path = "../core" }
lazy-allrounder-platform = { path = "../platform" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tray-icon.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
# tray-icon's Linux backend is GTK-based; the tray event loop must run a GTK
# main loop, which requires depending on the same gtk version tray-icon uses.
gtk = "0.18"
