[package]
name = "lazy-allrounder-integrations"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
lazy-allrounder-core = { path = "../core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
